[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Sample/SampleList.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Text33.tres" type="DynamicFont" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 670.0
margin_bottom = 1000.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 620.0
margin_bottom = 950.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 950.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="BtnTextEdit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 419.0
margin_right = 300.0
margin_bottom = 465.0
custom_fonts/font = ExtResource( 2 )
text = "Text Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnLineEdit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 485.0
margin_right = 300.0
margin_bottom = 531.0
custom_fonts/font = ExtResource( 2 )
text = "Line Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 320.0
margin_right = 620.0
margin_bottom = 950.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="BtnParticles" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 419.0
margin_right = 300.0
margin_bottom = 465.0
custom_fonts/font = ExtResource( 2 )
text = "Particles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 485.0
margin_right = 300.0
margin_bottom = 531.0
custom_fonts/font = ExtResource( 2 )
text = "Click me"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer/BtnTextEdit" to="." method="_on_BtnTextEdit_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer/BtnLineEdit" to="." method="_on_BtnLineEdit_button_up"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer2/BtnParticles" to="." method="_on_BtnParticles_button_up"]
